# ord-app

./: .dockerignore  Dockerfile  Dockerfile.single  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  entrypoint_single.sh  format.sh  nginx.conf  pyproject.toml  ruff.toml  supervisord.conf
.github/workflows/: checks.yml  tests.yml  ui_checks.yml
migrations/: env.py
migrations/versions/: 10ec23a511a7_init.py  65571b473264_make_orcid_id_field_uniqueness.py  85f3c3d0b2e8_add_template_table.py  fdca65b9b209_change_index_types.py
ord_app/api/editor/: reactions.py  reactions_test.py
ord_app/service_api/: constants.py  main.py  models.py  settings.py
ord_app/service_api/domain/: auth.py  datasets.py  exceptions.py  groups.py  reactions.py  templates.py  users.py
ord_app/service_api/repositories/: base.py  datasets.py  groups.py  reactions.py  templates.py  users.py
ord_app/service_api/resources/v1/: auth.py  datasets.py  group.py  reactions.py  templates.py  users.py  utilities.py
ord_app/service_api/schemas/: auth.py  base.py  datasets.py  groups.py  reactions.py  templates.py  users.py  utilites.py
ord_app/service_api/services/: auth0.py  exceptions.py  pb_utils.py  postgresql.py  resolvers.py  utils.py
ord_app/tests/: conftest.py
ord_app/tests/test_groups/: test_add_group_members.py  test_create_groups.py  test_get_group_members.py  test_get_groups.py  test_update_group.py
ord_app/tests/test_repositories/: test_user_repository.py
ord_app/tests/test_templates/: test_create_templates.py  test_delete_templates.py  test_get_templates.py  test_update_templates.py
ord_app/tests/test_users/: __init__.py  test_users_update.py
ord_app/tests/testdata/: reaction_duplication.txtpb
ord_app/tests/tests_datasets/: test_common_datasets.py  test_create_dataset.py  test_delete_dataset.py  test_enumerate.py  test_get_dataset_group.py  test_get_datasets.py  test_share_dataset.py  test_update_dataset.py
ord_app/tests/tests_reactions/: test_create_reactions.py  test_create_reactions_from_scratch.py  test_delete_reactions.py  test_get_reactions.py  test_update_reactions.py
ui/: .env.template  .prettierignore  .stylelintignore  .stylelintrc.json  FILE_LICENSE  eslint.config.mjs  index.html  license-checker-config.json  package-lock.json  package.json  postcss.config.cjs  tsconfig.app.json  vite.config.ts
ui/.husky/: pre-commit
ui/src/: index.scss  main.tsx  vite-env.d.ts
ui/src/__tests__/: dummy.spec.ts
ui/src/common/: configuration.constants.ts  constants.ts
ui/src/common/dictionary/: formatting.json
ui/src/common/hooks/: useAppUncontrolled.ts  useAuth.ts  useTextFormatting.ts  useUncontrolledSelect.ts
ui/src/common/icons/: index.ts
ui/src/common/styling/: colors.module.scss  colors.ts  index.ts  theme.ts  typography.module.scss
ui/src/common/types/: auth.ts  breadcrumbs.ts  downloadMenuOptions.ts  index.ts  notification.ts  pages.ts  roles.ts  selectOptions.ts
ui/src/common/utils/: copyToClipboard.ts  date.ts  formatDate.ts  index.ts  indigo.ts  itemsById.ts  requiredTextField.schema.ts  (+2 more)
ui/src/core/: AppContent.tsx  AppRoot.tsx
ui/src/routes/: Routes.tsx  index.ts
ui/src/store/: axiosInstance.ts  configureAppStore.ts  rootReducer.ts  useAppDispatch.ts
(+474 files in other folders)
